; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_resource.c_resource_unload.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_resource.c_resource_unload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wined3d_resource = type { i64 }

@.str = private unnamed_addr constant [45 x i8] c"Resource %p is being unloaded while mapped.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @resource_unload(%struct.wined3d_resource* %0) #0 {
  %2 = alloca %struct.wined3d_resource*, align 8
  store %struct.wined3d_resource* %0, %struct.wined3d_resource** %2, align 8
  %3 = load %struct.wined3d_resource*, %struct.wined3d_resource** %2, align 8
  %4 = getelementptr inbounds %struct.wined3d_resource, %struct.wined3d_resource* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load %struct.wined3d_resource*, %struct.wined3d_resource** %2, align 8
  %9 = call i32 @ERR(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str, i64 0, i64 0), %struct.wined3d_resource* %8)
  br label %10

10:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @ERR(i8*, %struct.wined3d_resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
